syntax = "proto3";

package cr8r.controller;

import "core/experiment.proto";

message PFindExperimentsRequest {
    uint32 id = 1;
}

message PFindExperimentsReply {
    repeated core.PExperiment experiments = 1;
}